# MARCH_MADNESS_2026

./: .gitignore  2_train_2026.ipynb  5_submission.ipynb  A01_eda_upsets.ipynb  A02_model_evaluation.ipynb  K01_kaggle_model.ipynb  M01_cleaning.ipynb  M03_training_scores.ipynb  M04_training_no_seed.ipynb  R01_synthetic_balanced_data.ipynb  R02_balanced_training.ipynb  R03_bracket_rounds.ipynb  README.md  W02_training_seeded.ipynb  W03_training_scores.ipynb  W05_submission.ipynb  W1_cleaning_2026.ipynb  W3_scores_2026.ipynb  W4_no_seed_2026.ipynb  W5_submission.ipynb  bracket_balanced_visualization.html  bracket_no_seed_visualization.html  bracket_rounds_local_2026.ipynb  bracket_visualization.html  eval_training_windows.py  extract_all_predictions.py  generate_all_matchups.py  generate_bracket_balanced.py  generate_bracket_unbalanced.py  generate_kaggle_bracket.py  odds_test.json  pyproject.toml  submission_2026.csv  submission_2026_W.csv
data_2026/: final_features.csv  final_features_W.csv  final_season_stats_W.csv
march-madness-tracker/: index.html  package-lock.json  package.json
model/: kaggle_spread.joblib  kaggle_total.joblib  march_madness_model.joblib  march_madness_model_W.joblib  march_madness_model_no_seed.joblib  march_madness_model_no_seed_W.joblib  march_madness_model_scores_W.joblib  round_models_M.joblib  round_models_M_balanced.joblib  round_models_M_balanced_training.joblib  round_models_M_unbalanced.joblib  round_models_W_balanced.joblib  round_models_W_balanced_training.joblib  round_models_W_unbalanced.joblib  spread_model.joblib  (+7 more)
(+31 files in other folders)
