[project]
name = "march-madness-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

